[Fix] fix anchor tag 'blue-touch' on mobile screen

--- a/styles/HeroHome/_HeroHome.scss
+++ b/styles/HeroHome/_HeroHome.scss
@@ -76,7 +76,7 @@
       .hero-button-wrapper {
         margin-bottom: 3em;
 
-        .button:nth-child(1) {
+        a {
           margin-right: 1em;
         }
       }
