--- a/styles/_queries.scss
+++ b/styles/_queries.scss
@@ -228,7 +228,7 @@
           flex-direction: column;
           align-items: center;
 
-          .button:nth-child(1) {
+          a {
             margin-right: 0;
             margin-bottom: 1em;
           }
