--- a/styles/default.css
+++ b/styles/default.css
@@ -1875,7 +1875,7 @@ input[type=text]:focus, input[type=password]:focus {
   margin-bottom: 3em;
 }
 
-.hero-home-container .content-wrapper .hero-content .hero-button-wrapper .button:nth-child(1) {
+.hero-home-container .content-wrapper .hero-content .hero-button-wrapper a {
   margin-right: 1em;
 }
 
@@ -2066,7 +2066,7 @@ input[type=text]:focus, input[type=password]:focus {
         -ms-flex-align: center;
             align-items: center;
   }
-  .hero-home-container .content-wrapper .hero-content .hero-button-wrapper .button:nth-child(1) {
+  .hero-home-container .content-wrapper .hero-content .hero-button-wrapper a {
     margin-right: 0;
     margin-bottom: 1em;
   }
